v3/subsets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
spec:
  selector:
    app: reviews # <-- Selects pods from BOTH deployments
  ports:
    - port: 9080
      name: http
